--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1 {
   margin: 30px;
   font-family: 'Lobster', cursive;
   text-shadow: 5px 0 var(--titles);
-  font-size: 8rem;
+  font-size: 6rem;
   color: var(--titleShadow);
 }
 button{
@@ -89,9 +89,15 @@ img {
     
   }
   h1{
-    font-size: 3rem;
+    font-size: 1.5rem;
+    margin: 10px 30px;
   }
   button{
-    width: 30vw;
+    width: 18vw;
+    font-size: 1rem;
+    padding: 5px;
+  }
+  img {
+    width: 40%;
   }
 }
